mdmCeneveo/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Cenveo Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Dormant</fullName>
        </values>
        <values>
            <fullName>Not Followed Up</fullName>
        </values>
        <values>
            <fullName>Other</fullName>
        </values>
        <values>
            <fullName>Prequalified</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Untouched</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Activity_Monitor__c</fullName>
        <formula>IF
(ISNULL(LastActivityDate),
IMAGE(&quot;/img/samples/color_red.gif &quot;, &quot;NO ACTIVITIES&quot;,15,15),
IF( Days_Since_Last_Activity__c &lt;15,
IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;Less than 30&quot;,15,15) ,
IF( Days_Since_Last_Activity__c &lt; 30,
IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;30 to 45&quot;,15,15),
IF( Days_Since_Last_Activity__c &gt;29,
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;45 to 60&quot;,15,15) ,
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;More than 60 Days&quot;,15,15)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green: Activity &lt; 15 Days

Yellow: Activity &gt; 15 Days

Red: Activity &gt;45 Days</inlineHelpText>
        <label>Activity Monitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aging__c</fullName>
        <formula>TODAY()-DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Artwork__c</fullName>
        <label>Artwork</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Acct_Number__c</fullName>
        <label>Billing Acct Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Binding__c</fullName>
        <label>Binding</label>
        <picklist>
            <picklistValues>
                <fullName>Case Bound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perfect Bound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saddle Stitch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bounce_Description__c</fullName>
        <label>Bounce Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bounce_Reason__c</fullName>
        <label>Bounce Reason</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCR_CLAM_2__Set_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CCR CLAM 2 app multiple merge - use this field to flag a single record as the master record, i.e. the record to be kept and all duplicate data to be merged onto within a duplicate set</description>
        <label>Set Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCR_CLAM_2__Set_Number__c</fullName>
        <description>CCR CLAM 2 app multiple merge - use this field to group duplicates together, i.e. give each set of duplicates its own unique set number and populate this field with that number for each of the duplicates in the set</description>
        <label>Set Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCR_CLAM_2__Set_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CCR CLAM 2 app multiple merge - this field is used by the CCR CLAM app to flag a duplicate set as having finished merge processing</description>
        <label>Set Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CVO_Lead_City__c</fullName>
        <label>CVO - Lead City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVO_Lead_Email__c</fullName>
        <label>CVO - Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CVO_Lead_First_Name__c</fullName>
        <label>CVO - Lead First Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVO_Lead_Last_Name__c</fullName>
        <label>CVO - Lead Last Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVO_Lead_Phone__c</fullName>
        <label>CVO - Lead Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CVO_Lead_State__c</fullName>
        <label>CVO - Lead State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVO_Lead_Street__c</fullName>
        <label>CVO - Lead Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVO_Lead_Zip__c</fullName>
        <label>CVO - Lead Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Owner__c</fullName>
        <inlineHelpText>Owner of the campaign that the lead is associated with</inlineHelpText>
        <label>Campaign Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover__c</fullName>
        <label>Cover</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cross_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cross Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Comments__c</fullName>
        <description>Comments added by the customer/lead on the web form.</description>
        <label>Customer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>today() - LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Convert__c</fullName>
        <formula>IF( IsConverted, ROUND( ( ConvertedDate - DATEVALUE(CreatedDate) ), 0 ), 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Convert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depth__c</fullName>
        <label>Depth</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Services__c</fullName>
        <label>Design Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Digital_Marketing_member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Marketing member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Type__c</fullName>
        <label>Display Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Envelopes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Envelopes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finished_Size__c</fullName>
        <label>Finished Size</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Finishing__c</fullName>
        <label>Packaging Finishing</label>
        <picklist>
            <picklistValues>
                <fullName>Select One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Die cut only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Die cut fold &amp; glue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Die cut &amp; window</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Die cut, window, pick &amp; place, fold &amp; glue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Folding_Cartons__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Folding Cartons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Services__c</fullName>
        <label>Fulfillment Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Information_Request__c</fullName>
        <description>Field for Unbounce integration</description>
        <label>Information Request</label>
        <picklist>
            <picklistValues>
                <fullName>Additional Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Sample Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Me</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ink_Side_1__c</fullName>
        <label>Ink Side 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ink_Side_2__c</fullName>
        <label>Ink Side 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inquiry_Type__c</fullName>
        <label>Inquiry Type</label>
        <picklist>
            <picklistValues>
                <fullName>General Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Label Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art / Graphics Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Questions / Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Age_Since_Converted__c</fullName>
        <formula>IF( IsConverted, ROUND( ( DATEVALUE(NOW()) -  ConvertedDate ), 0 ), 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age Since Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Circumference__c</fullName>
        <label>Circumference</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Cut_Height__c</fullName>
        <label>Cut Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Finishing__c</fullName>
        <label>Gilbreth Finishing</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Flat_Width__c</fullName>
        <label>Flat Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Material_Type__c</fullName>
        <label>Material Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Nu_of_Colors__c</fullName>
        <label>Number of Colors</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Number_of_Skus__c</fullName>
        <label>Number of Skus</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Perforation__c</fullName>
        <label>Perforation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Quantity__c</fullName>
        <description>NOT FOR USE ON PAGE LAYOUT - we are only keeping this because it stores quantities of leads that have already been converted.</description>
        <label>LQuantity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <formula>CASE(Lead_Type__c, &apos;Warm&apos;, 200, &apos;Hot&apos;, 100, &apos;Cold&apos;, 50, &apos;Email&apos;, 30, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead source</label>
        <picklist>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Association Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google/Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar – Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar – Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - Cenveo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - CenveoLabel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - CenveoPack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - CenveoPrint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - CenveoPublisherServices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web - GilbrethUSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Lead_Info__c</fullName>
        <label>Load Lead Info</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Verticals__c</fullName>
        <description>Used with Unbounce integration</description>
        <label>Market Verticals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Pictures__c</fullName>
        <inlineHelpText>Upload pictures or notes</inlineHelpText>
        <label>Notes-Pictures</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_Art_Versions__c</fullName>
        <label>Number of Art Versions</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Pages__c</fullName>
        <label>Number of Pages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Versions_Events__c</fullName>
        <label>Number of Versions / Events</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>On_Going_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Going Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_In__c</fullName>
        <label>Opt In Date/Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package_Type__c</fullName>
        <label>Package Type</label>
        <picklist>
            <picklistValues>
                <fullName>1,2,3 Bottom with Tuck Top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Corner Beers (Lid and Base)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Panel Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Corner Beers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Panel Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blister Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD / DVD Open Ended Sleeve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD / DVD Sleeve with Flap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face Seal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folding Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fold Over</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Top Auto Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (specify in comment field below)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverse Tuck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandwich Style</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sealed Ends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Select One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Straight Tuck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stretch Film</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuck Top Auto Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walker Lock Tray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wallet Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Packaging_Sub_Type__c</fullName>
        <label>Packaging Sub-Type</label>
        <picklist>
            <controllingField>Package_Type__c</controllingField>
            <picklistValues>
                <fullName>1,2,3 Bottom w/ Tuck Top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Corner Beers (base only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Corner Beers (lip &amp; amp; base)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Panel Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Corner Beers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Panel Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Bottom Gable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD/DVD Open Ended Sleeve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD/DVD Sleeve with Flap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face Seal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fold over</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Top Auto Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (describe below)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverse Tuck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandwich Style (Two Piece)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Straight Tuck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stretch Film</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuck Top Auto Bottom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walker Lock Tray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walker Lock w/Lid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waller Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paper_Cover__c</fullName>
        <label>Paper (Cover)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Paper_Stock__c</fullName>
        <label>Paper Stock</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Paper_Text__c</fullName>
        <label>Paper (Text)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Paper__c</fullName>
        <label>Paper</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Past_Sales__c</fullName>
        <label>Past Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant_Group__c</fullName>
        <label>Plant Group</label>
        <picklist>
            <picklistValues>
                <fullName>Labels &amp; Packaging Locations</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Envelope Locations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plant_Location__c</fullName>
        <label>Plant Location</label>
        <picklist>
            <controllingField>Plant_Group__c</controllingField>
            <picklistValues>
                <fullName>Gilbreth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charlotte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl - Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl – DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl – India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl – Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toledo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Louis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sidney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nashua – Tennessee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nashua – Omaha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - Omaha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rx Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nashua - California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nashua - Merrimack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santa Fe Springs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indianapolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Williamsburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenosha</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prime_Labels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prime Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Finishing__c</fullName>
        <label>Print Finishing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Side_1__c</fullName>
        <label>Print Side 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Side_2__c</fullName>
        <label>Print Side 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_SF_Lead_ID__c</fullName>
        <label>Prod SF Lead ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>Folding Cartons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sleeves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Label Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coated Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelopes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Group__c</fullName>
        <label>Product Sub Group</label>
        <picklist>
            <controllingField>Product_Group__c</controllingField>
            <picklistValues>
                <fullName>Auto-bottoms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cards – Blisters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cards- Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Print - Charlotte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Gum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eflute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fedex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full body shrink sleeve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full body shrink sleeve with tamper evidence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat Seal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imaging Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailers (mailing services provided)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailers (non mailing services provided)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pick &amp; Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Shelf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shrink combo pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Straight line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supermarket Thermal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>